fixed issue offline warning message is hard to read in dark mode

--- a/client/src/components/OfflineWarning/offline-warning.css
+++ b/client/src/components/OfflineWarning/offline-warning.css
@@ -3,5 +3,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: lightblue;
 }
